--- a/index.Rmd
+++ b/index.Rmd
@@ -52,28 +52,17 @@ show the outliners | facets | for next experiment | (5)
 
 ---
 # Experiment 1- (2)
-```{r,echo=FALSE}
-library(knitr)
-knitr::include_graphics("/Users/Chaoyi/Desktop/online presentation/2.png")
-```
+![image](2.png)
+
 ---
 # Experiment 1- (3)
-```{r,echo=FALSE}
-library(knitr)
-knitr::include_graphics("/Users/Chaoyi/Desktop/online presentation/3.png")
-```
+![image](3.png)
 ---
 # Experiment 1- (4)
-```{r,echo=FALSE}
-library(knitr)
-knitr::include_graphics("/Users/Chaoyi/Desktop/online presentation/4.png")
-```
+![image](4.png)
 ---
 # Experiment 1- (5)
-```{r,echo=FALSE}
-library(knitr)
-knitr::include_graphics("/Users/Chaoyi/Desktop/online presentation/5.png")
-```
+![image](5.png)
 ---
 # Appropriateness/novelty of analysis
   + The two-tailed paired t-test is an appropriate analysis for the cases where we want to see if there is any significant differences among categorical predictors; 
@@ -118,16 +107,10 @@ to test if the proportion of choosing a “good” sentence as the better one wa
 to verify if the difference is significant for each pair | facets |to look into individual differences|(2)
 ---
 # Experiment 2- (1)
-```{r,echo=FALSE}
-library(knitr)
-knitr::include_graphics("/Users/Chaoyi/Desktop/online presentation/6.png")
-```
+![image](6.png)
 ---
 # Experiment 2- (2)
-```{r,echo=FALSE}
-library(knitr)
-knitr::include_graphics("/Users/Chaoyi/Desktop/online presentation/7.png")
-```
+![image](7.png)
 ---
 # Appropriateness/novelty of analysis
 
